tests/fixtures/invalid/shift_count_too_large.c
int main() {
    return 1 >> 64;
}
